# cxxtk

./: .gitignore  meson.build
src/tk/graph/: graph.hpp
src/tk/util/: bitmap.hpp  clock.hpp  connect.hh  env.hpp  noncopy.hpp  obj_pool.hpp  object.hpp  scope.hpp
tests/: test_connect.cc  test_cow_ptr.cc  test_graph.cpp  test_obj_pool.cpp
tk/graph/: graph.hpp  main.cpp  meson.build
tk/log/: logger.cpp  logger.h
tk/thread/: scheduler.cpp  scheduler.h  spinlock.h  spinlock.hh  task.h  thread_pool.h  threadsafe_queue.h  worker.cpp  worker.h
tk/util/: any.cpp  any.h  connect.hh  cow_ptr.hh  crtp.hh  factory.hpp  int_def.h  object.h  scope.hpp  sigslot.h
